# capa

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Capa-EBNF.md  Capa-WhitePaper.md  README.md  SECURITY.md  TODO.md  WHITEPAPER.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  release-binaries.yml  tests.yml
benchmarks/: README.md  fib.capa  fib_baseline.py  runner.py  scope_analyser.capa  scope_analyser_baseline.py  ua_parse.capa  ua_parse_baseline.py
capa/: __init__.py  __main__.py  _suggest.py  analyzer.py  builtins.py  capa_ast.py  cli.py  docgen.py  errors.py  formatter.py  init_project.py  lexer.py  loader.py  lsp_server.py  manifest.py  parser.py  repl.py  tokens.py  transpiler.py  typesys.py
capa/analyzer/: __init__.py  _declarations.py  (+7 more)
deploy/: README.md  capa-entry.py  capa.spec  cloudflare-dns.zone  install.ps1  install.sh  sign-provenance.sh
docs/: cra.md  cve_eslint_scope.md  cve_jinja2_ssti.md  cve_lxml_xxe.md  cve_node_ipc.md  cve_pickle.md  cve_pyyaml.md  cve_torchtriton.md  cve_ua_parser_js.md  cve_xz_utils.md  demo-event-stream.md  empirical_micro.md  getting-started.md  llm-tool-sandbox.md  migration.md  paper-draft.md  positioning.md  provenance-signing.md  reference.md  regulatory.md  semantics.md  stdlib.md  tour.html  tutorial.md
examples/: aliasing.capa  basics.capa  cap_violations.capa  clock_attenuation.capa  closures.capa  consume.capa  cve_eslint_scope.capa  cve_jinja2_ssti.capa  cve_lxml_xxe.capa  cve_node_ipc.capa  cve_pickle.capa  cve_pyyaml.capa  cve_torchtriton.capa  cve_ua_parser_js.capa  cve_xz_utils.capa  cyclonedx_parser.capa  demo_event_stream.capa  documented_demo.capa  empirical_config.capa  empirical_config_naive.py  errors.capa  fs_env_attenuation.capa  generics.capa  grades.capa  hello.capa  interactive.capa  io.capa  json.capa  llm_agent_runner.capa  llm_anthropic_agent.capa  llm_anthropic_helper.py  llm_anthropic_real.capa  llm_tool_sandbox.capa  manifest_demo.capa  migrate_logfetcher_naive.py  migrate_logfetcher_step1_unsafe.capa  migrate_logfetcher_step2_mixed.capa  migrate_logfetcher_step3_typed.capa  net_attenuation.capa  patterns.capa  (+11 more)
proofs/: CapaSoundness.agda  CapaSyntax.agda  README.md
tests/: test_analyzer.py  test_attenuation.py  test_attributes.py  test_dataflow.py  test_docs.py  test_formatter.py  test_init_project.py  test_lexer.py  test_loader.py  test_lsp.py  test_parser.py  test_properties.py  test_repl.py  test_runtime_classes.py  test_transpiler.py  test_watch.py
vscode/: README.md  language-configuration.json  package.json
(+62 files in other folders)
