[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capa"
version = "0.6.0"
description = "Capa, a capability-centric programming language"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Nelson Duarte", email = "nelson.duarte31@gmail.com" },
]
keywords = ["language", "compiler", "capabilities", "type-checker", "transpiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.optional-dependencies]
# Install with: `pip install -e .[lsp]`. Required only when running
# the language server (`python -m capa lsp`); the rest of the
# compiler stays dependency-free on the standard library.
lsp = ["pygls>=2.0"]
# Install with: `pip install -e .[test]`. Adds the libraries needed
# to run the full test suite, including the property-based tests in
# `tests/test_properties.py` that fuzz the lexer / parser /
# formatter with Hypothesis.
test = ["pytest>=7", "hypothesis>=6"]

[project.scripts]
capa = "capa.cli:main"

[project.urls]
# Homepage = "..."
# Repository = "..."

[tool.setuptools]
packages = ["capa", "capa.runtime"]
